# verity-mvp

./: .gitignore  ARCHITECTURE_REVIEW.md  AUDIT_REPORT_2025-12-26.md  AUDIT_REPORT_2025-12-31_GENERICIDAD.md  BETA_SNAPSHOT_2025-12-26.md  DATA_DICTIONARY_REVIEW.md  DEMO_SNAPSHOT_2025-12-20.md  Dockerfile  FRONTEND_SPEC.md  LEGACY_ISOLATION_CHECKLIST.md  LUMINAI_ANALYSIS.md  README.md  SESSION_NOTES_2025-12-17.md  SESSION_NOTES_2025-12-18.md  SESSION_NOTES_2025-12-25.md  SESSION_NOTES_2025-12-26.md  SESSION_NOTES_2026-01-04.md  SESSION_NOTES_2026-01-06.md  SYSTEM_INVARIANTS.md  audit_output.txt  audit_results.json  cloudbuild.yaml  openapi.json  pyproject.toml  response_output.txt  start_server.bat  start_verity.ps1  test_api_v2.py  test_document.txt  test_final_scope.py  test_guard_clause.py  test_output.txt  test_output_utf8.txt
.github/: copilot-instructions.md
docs/: CONTRACTS_V2.md  RUNBOOK_AUTH_DATA.md
frontend/: .env.example  App.tsx  DESIGN_SYSTEM.md  README.md  constants.tsx  index.html  index.tsx  metadata.json  package-lock.json  package.json  start.ps1  start.sh  types.ts  vite.config.ts
legacy_frozen/: README.md  chart_agent.py  code_generator_agent.py  doc_qa_agent.py  forecast_agent.py
scripts/: analyze_spotify_data.py  audit_walmart.py  check_legacy_leaks.py  check_openapi_sync.py  debug_gemini.py  debug_semantics_tests.py  deploy.sh  flush_store.py  load_spotify_data.py  run-dev.bat  run.ps1  run.sh  run_beta_validation.ps1  setup.ps1  setup.sh  sync_openapi.py  test.sh  test_basic.py  test_legacy_isolation.py  test_quick.py  test_ranking.py  test_ranking_simple.py  test_response.py  test_top_songs.py
supabase/: schema.sql
tests/: __init__.py  test_agent_chart_shortcut.py  test_anti_row_ids_guard.py  test_api.py  test_auth_otp_jwt.py  test_auth_v2_otp_validate.py  (+15 more)
(+164 files in other folders)
