[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verity"
version = "1.0.0"
description = "Verity MVP - Modular monolith with FastAPI for document management, AI agent, and approvals"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Verity Team" }]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.26.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.4.0",
    "supabase>=2.3.0",
    "google-cloud-aiplatform>=1.38.0",
    "google-generativeai>=0.3.0",
    "google-cloud-secret-manager>=2.18.0",
    "sse-starlette>=1.8.0",
    "structlog>=24.1.0",
    "redis>=5.0.0",
    "rapidfuzz>=3.5.0",
    "jsonschema>=4.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/verity"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    # Third-party deps: noisy deprecations in our current dependency set.
    'ignore::pydantic.warnings.PydanticDeprecatedSince212',
    'ignore::pydantic.warnings.PydanticDeprecatedSince20',
    'ignore:.*datetime\.datetime\.utcnow\(\) is deprecated.*:DeprecationWarning',
    'ignore::FutureWarning:verity.core.response_composer',
]

[tool.mypy]
python_version = "3.11"
strict = true
